--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,37 @@
-<nav class="navbar fixed-bottom navbar-light bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Este es mi footer</a>
+<footer class="fixed-bottom navbar-light my-bg-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md">
+        <div class="d-flex justify-content-center">
+          <div>
+            <a href="https://twitter.com/ftrotta18"
+              ><i class="fab fa-twitter"> </i
+            ></a>
+          </div>
+          <div>
+            <a href="https://www.linkedin.com/in/trottafede/"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
+          </div>
+          <div>
+            <a href="/"><i class="fab fa-whatsapp"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md mt-3 mb-3">
+        <hr />
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md">
+        <div class="d-flex justify-content-center">
+          <p>Page made in 2021 by Federico Trotta</p>
+        </div>
+      </div>
+    </div>
   </div>
-</nav>
+</footer>
