--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,25 +1,3 @@
 <app-nav-bar></app-nav-bar>
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-6">
-      <h1>{{ title }}</h1>
-
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Titulo</label>
-        <input
-          class="form-control"
-          type="email"
-          id="exampleInputEmail1"
-          [(ngModel)]="title"
-          aria-describedby="emailHelp"
-          placeholder="Ingrese un titulo"
-        />
-        <div id="emailHelp" class="form-text">
-          We'll never share your TITLE XD with anyone else.
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<app-main-content></app-main-content>
 <app-footer></app-footer>
