Página sobre mi y sobre projectos

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="fixed-bottom navbar-light my-bg-footer">
+<footer class="navbar-light my-bg-footer">
   <div class="container">
     <div class="row">
       <div class="col-md">
@@ -14,7 +14,9 @@
             ></a>
           </div>
           <div>
-            <a href="/"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://github.com/trottafede"
+              ><i class="fab fa-github"></i
+            ></a>
           </div>
         </div>
       </div>
