--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,13 @@
 <app-nav-bar></app-nav-bar>
-<app-main-content></app-main-content>
+<div class="container">
+  <div class="row">
+    <div class="col-md-2">
+      <app-side-bar></app-side-bar>
+    </div>
+    <div class="col-md-10">
+      <app-projects></app-projects>
+    </div>
+  </div>
+</div>
+
 <app-footer></app-footer>
