--- a/src/app/side-bar/side-bar.component.css
+++ b/src/app/side-bar/side-bar.component.css
@@ -1,41 +1,4 @@
-body {
-  font-family: "Lato", sans-serif;
-}
-
-.sidenav {
-  width: 130px;
-  position: fixed;
-  z-index: 1;
-  top: 100px;
-  left: 10px;
-  background: #eee;
-  overflow-x: hidden;
-  padding: 8px 0;
-}
-
-.sidenav a {
-  padding: 6px 8px 6px 16px;
+a {
   text-decoration: none;
-  font-size: 25px;
-  color: #2196f3;
-  display: block;
-}
-
-.sidenav a:hover {
-  color: #064579;
-}
-
-.main {
-  margin-left: 140px; /* Same width as the sidebar + left position in px */
-  font-size: 28px; /* Increased text to enable scrolling */
-  padding: 0px 10px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-  .sidenav a {
-    font-size: 18px;
-  }
+  color: rgba(107, 107, 202, 0.76);
 }
