--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,56 +1,12 @@
-<div class="sidenav">
-  <a href="#about">About</a>
-  <a href="#services">Services</a>
-  <a href="#clients">Clients</a>
-  <a href="#contact">Contact</a>
+<div class="mb-3 mt-3">
+  <a href="#about">Projects</a>
 </div>
-
-<div class="main">
-  <h2>Auto Sidebar</h2>
-  <p>
-    This sidebar is as tall as its content (the links), and is always shown.
-  </p>
-  <p>Scroll down the page to see the result.</p>
-  <p>
-    Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-    definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo.
-    Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus
-    repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae
-    voluptatibus.
-  </p>
-  <p>
-    Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-    definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo.
-    Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus
-    repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae
-    voluptatibus.
-  </p>
-  <p>
-    Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-    definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo.
-    Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus
-    repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae
-    voluptatibus.
-  </p>
-  <p>
-    Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-    definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo.
-    Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus
-    repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae
-    voluptatibus.
-  </p>
-  <p>
-    Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-    definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo.
-    Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus
-    repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae
-    voluptatibus.
-  </p>
-  <p>
-    Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum
-    definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo.
-    Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus
-    repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae
-    voluptatibus.
-  </p>
+<div class="mb-3">
+  <a href="#about">Algo irá acá</a>
+</div>
+<div class="mb-3">
+  <a href="#about">Algo para poner acá</a>
+</div>
+<div class="mb-3">
+  <a href="#about">Algo por acá</a>
 </div>
