arreglos de cards

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,7 +6,7 @@
   <div class="col">
     <div class="card h-100">
       <img
-        src="https://i.imgur.com/lKZS2yK.png"
+        src="https://i.imgur.com/elEUYaV.png"
         class="card-img-top"
         alt="twitter-img"
       />
@@ -24,12 +24,10 @@
           Back-end technologies: Node.js, Express.js, API-REST, JWT
         </p>
         <div class="text-center">
-          <a href="https://github.com/trottafede/twitter" target="_blank"
+          <a href="https://github.com/trottafede/twitter-react" target="_blank"
             ><i class="fab fa-github"></i
           ></a>
-          <a
-            href="https://twitter-hhjnjfzh1-trottafede.vercel.app/signIn"
-            target="_blank"
+          <a href="https://twitter-react-seven.vercel.app/" target="_blank"
             ><i class="fas fa-laptop"></i
           ></a>
         </div>
@@ -59,9 +57,7 @@
           <a href="https://github.com/trottafede/twitter" target="_blank"
             ><i class="fab fa-github"></i
           ></a>
-          <a
-            href="https://twitter-hhjnjfzh1-trottafede.vercel.app/signIn"
-            target="_blank"
+          <a href="https://twitter-tan.vercel.app/signIn" target="_blank"
             ><i class="fas fa-laptop"></i
           ></a>
         </div>
