Some projects added

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,13 +2,67 @@
 
 <h2>Some of the projects I have done as a web developer:</h2>
 
+<!--  -->
+
+<!--  -->
 <div class="row row-cols-1 row-cols-md-3 g-4">
+  <!--  -->
+  <div class="col">
+    <div class="card h-100">
+      <img
+        src="https://i.imgur.com/QrJltTs.png"
+        class="card-img-top"
+        alt="HackComerce image"
+        height="200"
+      />
+      <div class="card-body">
+        <h5 class="card-title">HackComerce</h5>
+        <p class="card-text">
+          This is an e-commerce web page. In our team we worked with both
+          front-end and back-end. We decided to buy a template for the visual
+          design of the page and adapt it to React.js because it was a template
+          made with jQuery.
+        </p>
+
+        <p class="card-text">
+          Front-end technologies: HTML, CSS3, JavaScript(ES6+), React.js, React
+          Bootstrap, Redux, React Router
+        </p>
+        <p class="card-text">
+          Back-end technologies: Node.js, Express.js, API-REST, JWT, MySQL,
+          PostgreSQL.
+        </p>
+
+        <div class="text-center">
+          <a
+            href="https://github.com/trottafede/e-commerce-front"
+            target="_blank"
+            ><i class="fab fa-github"> Front</i></a
+          >
+          <a
+            href="https://github.com/trottafede/e-commerce-back"
+            target="_blank"
+            ><i class="fab fa-github"> Back-end</i></a
+          >
+          <a href="https://e-commerce-front-three.vercel.app/" target="_blank"
+            ><i class="fas fa-laptop">{{ see }}</i></a
+          >
+        </div>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Date of the project: Jun 4, 2021</small>
+      </div>
+    </div>
+  </div>
+
+  <!--  -->
   <div class="col">
     <div class="card h-100">
       <img
         src="https://i.imgur.com/elEUYaV.png"
         class="card-img-top"
         alt="twitter-img"
+        height="200"
       />
       <div class="card-body">
         <h5 class="card-title">Twitter Clone with React.js</h5>
@@ -28,12 +82,12 @@
             ><i class="fab fa-github"></i
           ></a>
           <a href="https://twitter-react-seven.vercel.app/" target="_blank"
-            ><i class="fas fa-laptop"></i
-          ></a>
+            ><i class="fas fa-laptop"> {{ see }}</i></a
+          >
         </div>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Date of the project: 26 April 2021 </small>
+        <small class="text-muted">Date of the project: May 16, 2021 </small>
       </div>
     </div>
   </div>
@@ -45,6 +99,7 @@
         src="https://i.imgur.com/lKZS2yK.png"
         class="card-img-top"
         alt="twitter-img"
+        height="200"
       />
       <div class="card-body">
         <h5 class="card-title">Twitter Clone</h5>
@@ -58,44 +113,86 @@
             ><i class="fab fa-github"></i
           ></a>
           <a href="https://twitter-tan.vercel.app/signIn" target="_blank"
-            ><i class="fas fa-laptop"></i
-          ></a>
+            ><i class="fas fa-laptop"> {{ see }}</i></a
+          >
         </div>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Date of the project: 26 April 2021 </small>
+        <small class="text-muted">Date of the project: April 26, 2021 </small>
       </div>
     </div>
   </div>
+
+  <!--  -->
   <div class="col">
     <div class="card h-100">
-      <img src="..." class="card-img-top" alt="..." />
+      <img
+        src="https://i.imgur.com/QfYqFAC.png"
+        class="card-img-top"
+        alt="Hackflix image"
+        height="200"
+      />
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Hackflix</h5>
         <p class="card-text">
-          This card has supporting text below as a natural lead-in to additional
-          content.
+          In this project I used React.js in the front. We consumed an API from
+          themoviedb and we did a front-end for that API.
         </p>
+        <p class="card-text">
+          It has an infinit scroll ( or at least until the DB is repleted of
+          showing the movies)
+        </p>
+
+        <div class="text-center">
+          <a href="https://github.com/trottafede/Hackflix" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://hackflix-eight.vercel.app/" target="_blank"
+            ><i class="fas fa-laptop"> {{ see }}</i></a
+          >
+        </div>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
+        <small class="text-muted">Date of the project: May 8, 2021</small>
       </div>
     </div>
   </div>
+
+  <!--  -->
+  <!--  -->
   <div class="col">
     <div class="card h-100">
-      <img src="..." class="card-img-top" alt="..." />
+      <img
+        src="https://i.imgur.com/PeexCg3.png"
+        class="card-img-top"
+        alt="Automotora image"
+        height="200"
+      />
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
+        <h5 class="card-title">Automotora</h5>
         <p class="card-text">
-          This is a wider card with supporting text below as a natural lead-in
-          to additional content. This card has even longer content than the
-          first to show that equal height action.
+          I did this page as a end course project, in the front-end course at
+          Hack Academy.
         </p>
+        <p class="card-text">
+          Front-end technologies: HTML, CSS3, JavaScript(ES6+), Bootstrap.
+        </p>
+
+        <div class="text-center">
+          <a
+            href="https://github.com/trottafede/AutomotoraVIP-HA-Front"
+            target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a href="https://automotora-vip-ha-front.vercel.app/" target="_blank"
+            ><i class="fas fa-laptop"> {{ see }}</i></a
+          >
+        </div>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Last updated 3 mins ago</small>
+        <small class="text-muted">Date of the project: May 16, 2021 </small>
       </div>
     </div>
   </div>
+  <!--  -->
 </div>
