The date of one of the projects was modified

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -190,9 +190,9 @@
         </div>
       </div>
       <div class="card-footer">
-        <small class="text-muted">Date of the project: May 16, 2021 </small>
+        <small class="text-muted">Date of the project: Feb 2, 2021 </small>
       </div>
     </div>
   </div>
-  <!--  -->
+  <!-- asd -->
 </div>
