Proyectos, más seccion about me

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -2,23 +2,48 @@
   <h1 class="text-center">About me</h1>
 </div>
 
-<div class="mb-3">
-  <p>
-    My name is Federico Trotta, I am 25 years old. On June of 2021, I finished a
-    Coding Bootcamp at Hack Academy. Place where I learned about front-end web
-    development and back-end web development because it was an intensive 3-month
-    course with more than 600hs of practice, that enhanced my programming skills
-    in technologies like HTML, CSS3, JavaScript (ES6+), React.js, Node.js,
-    MySQL, MongoDB, etc.
-  </p>
-  <p>
-    On June of 2021, I joined Tata Consultancy Services as an IT trainee in a
-    junior technician position.
-  </p>
-  <p>
-    I define my self as an always motivated person to learn new things, not so
-    fast learner but a persistent learner. I enjoy learning things that I can
-    put in practice while I learn them, because that always helps me to a better
-    understanding of things.
-  </p>
+<div class="row">
+  <div class="col-md-2">
+    <img
+      class="Profile-pic"
+      src="https://scontent.fmvd3-1.fna.fbcdn.net/v/t1.6435-9/132420912_204153731322430_2557426944517197082_n.jpg?_nc_cat=110&ccb=1-3&_nc_sid=09cbfe&_nc_eui2=AeF6fG6W9FYj8FEwoAE9FRejMMPAqJLF-4Qww8CoksX7hP-rmPCm2IZEMvdkWG04964iQeGTek6WSV-_-U6DQkcg&_nc_ohc=bjPFWlcw1g8AX90Uyo2&_nc_ht=scontent.fmvd3-1.fna&oh=dd27a84bc1e0c71cab202783054e61c7&oe=60D1F203"
+      alt="Yo"
+    />
+  </div>
+
+  <div class="col-md-10">
+    <div class="mb-3">
+      <p>
+        My name is Federico Trotta, I am 25 years old. On June of 2021, I
+        finished a Coding Bootcamp at Hack Academy. Place where I learned about
+        front-end web development and back-end web development because it was an
+        intensive 3-month course with more than 600hs of practice, that enhanced
+        my programming skills in technologies like HTML, CSS3, JavaScript
+        (ES6+), React.js, Node.js, MySQL, MongoDB, etc.
+      </p>
+
+      <p>
+        I define my self as an always motivated person to learn new things, not
+        so fast learner but a persistent learner. I enjoy learning things that I
+        can put in practice while I learn them, because that always helps me to
+        a better understanding of things.
+      </p>
+
+      <p>
+        On June of 2021, I joined Tata Consultancy Services as an IT trainee in
+        a junior technician position and I am very happy for having my first IT
+        experience and having the opportunity to put in practice all the learned
+        in the Bootcamp. Also, I am looking forward to learn new things that
+        help me improve as a developer.
+      </p>
+
+      <div class="text-center">
+        <i class="fab fa-html5"></i>
+        <i class="fab fa-js-square"></i>
+        <i class="fab fa-css3-alt"></i>
+        <i class="fab fa-react"></i>
+        <i class="fab fa-node"></i>
+      </div>
+    </div>
+  </div>
 </div>
