--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,20 +1,20 @@
-<footer class="navbar-light my-bg-footer">
+<footer class="footer my-bg-footer">
   <div class="container">
     <div class="row">
       <div class="col-md">
         <div class="d-flex justify-content-center">
           <div>
-            <a href="https://twitter.com/ftrotta18"
+            <a href="https://twitter.com/ftrotta18" target="_blank"
               ><i class="fab fa-twitter"> </i
             ></a>
           </div>
           <div>
-            <a href="https://www.linkedin.com/in/trottafede/"
+            <a href="https://www.linkedin.com/in/trottafede/" target="_blank"
               ><i class="fab fa-linkedin-in"></i
             ></a>
           </div>
           <div>
-            <a href="https://github.com/trottafede"
+            <a href="https://github.com/trottafede" target="_blank"
               ><i class="fab fa-github"></i
             ></a>
           </div>
