--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -11,7 +11,7 @@
         height="34"
         class="d-inline-block align-text-top"
       />
-      Personal Page
+      Federico's page
     </a>
     <button
       class="navbar-toggler"
@@ -27,16 +27,9 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Work experience</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Education</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About me</a>
+          <a class="nav-link" aria-current="page" href="#"
+            ><i class="fas fa-home"></i
+          ></a>
         </li>
       </ul>
     </div>
