--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,20 +1,22 @@
-<h1 class="text-center">Something</h1>
-
-<h2>Some of the projects I have done as a web developer:</h2>
-
-<!--  -->
+<div class="mb-3 mt-3">
+  <h1 class="text-center">Projects</h1>
+</div>
 
 <!--  -->
-<div class="row row-cols-1 row-cols-md-3 g-4">
+
+<!--  -->
+<div class="row row-cols-1 row-cols-md-3 g-4 My-End-Of-Project">
   <!--  -->
   <div class="col">
     <div class="card h-100">
-      <img
-        src="https://i.imgur.com/QrJltTs.png"
-        class="card-img-top"
-        alt="HackComerce image"
-        height="200"
-      />
+      <a href="https://e-commerce-front-three.vercel.app/">
+        <img
+          src="https://i.imgur.com/QrJltTs.png"
+          class="card-img-top"
+          alt="HackComerce image"
+          height="200"
+        />
+      </a>
       <div class="card-body">
         <h5 class="card-title">HackComerce</h5>
         <p class="card-text">
@@ -37,14 +39,19 @@
           <a
             href="https://github.com/trottafede/e-commerce-front"
             target="_blank"
+            class="My-a-distance"
             ><i class="fab fa-github"> Front</i></a
           >
           <a
             href="https://github.com/trottafede/e-commerce-back"
             target="_blank"
+            class="My-a-distance"
             ><i class="fab fa-github"> Back-end</i></a
           >
-          <a href="https://e-commerce-front-three.vercel.app/" target="_blank"
+          <a
+            href="https://e-commerce-front-three.vercel.app/"
+            target="_blank"
+            class="My-a-distance"
             ><i class="fas fa-laptop">{{ see }}</i></a
           >
         </div>
@@ -58,12 +65,14 @@
   <!--  -->
   <div class="col">
     <div class="card h-100">
-      <img
-        src="https://i.imgur.com/elEUYaV.png"
-        class="card-img-top"
-        alt="twitter-img"
-        height="200"
-      />
+      <a href="https://twitter-react-seven.vercel.app/">
+        <img
+          src="https://i.imgur.com/elEUYaV.png"
+          class="card-img-top"
+          alt="twitter-img"
+          height="200"
+        />
+      </a>
       <div class="card-body">
         <h5 class="card-title">Twitter Clone with React.js</h5>
         <p class="card-text">
@@ -78,10 +87,22 @@
           Back-end technologies: Node.js, Express.js, API-REST, JWT
         </p>
         <div class="text-center">
-          <a href="https://github.com/trottafede/twitter-react" target="_blank"
-            ><i class="fab fa-github"></i
-          ></a>
-          <a href="https://twitter-react-seven.vercel.app/" target="_blank"
+          <a
+            href="https://github.com/trottafede/twitter-react"
+            target="_blank"
+            class="My-a-distance"
+            ><i class="fab fa-github"> Front</i></a
+          >
+          <a
+            href="https://github.com/trottafede/Backend_Twitter_React"
+            target="_blank"
+            class="My-a-distance"
+            ><i class="fab fa-github"> Back-end</i></a
+          >
+          <a
+            href="https://twitter-react-seven.vercel.app/"
+            target="_blank"
+            class="My-a-distance"
             ><i class="fas fa-laptop"> {{ see }}</i></a
           >
         </div>
@@ -95,43 +116,14 @@
   <!--  -->
   <div class="col">
     <div class="card h-100">
-      <img
-        src="https://i.imgur.com/lKZS2yK.png"
-        class="card-img-top"
-        alt="twitter-img"
-        height="200"
-      />
-      <div class="card-body">
-        <h5 class="card-title">Twitter Clone</h5>
-        <p class="card-text">
-          This is a Twitter clone. We used technologies as HTML, CSS3,
-          JavaScript (ES6+), Bootstrap in the front-end.
-        </p>
-        <p>In the back-end we used: Node.js, Express.js, Passport.js, EJS</p>
-        <div class="text-center">
-          <a href="https://github.com/trottafede/twitter" target="_blank"
-            ><i class="fab fa-github"></i
-          ></a>
-          <a href="https://twitter-tan.vercel.app/signIn" target="_blank"
-            ><i class="fas fa-laptop"> {{ see }}</i></a
-          >
-        </div>
-      </div>
-      <div class="card-footer">
-        <small class="text-muted">Date of the project: April 26, 2021 </small>
-      </div>
-    </div>
-  </div>
-
-  <!--  -->
-  <div class="col">
-    <div class="card h-100">
-      <img
-        src="https://i.imgur.com/QfYqFAC.png"
-        class="card-img-top"
-        alt="Hackflix image"
-        height="200"
-      />
+      <a href="https://hackflix-eight.vercel.app/">
+        <img
+          src="https://i.imgur.com/QfYqFAC.png"
+          class="card-img-top"
+          alt="Hackflix image"
+          height="200"
+        />
+      </a>
       <div class="card-body">
         <h5 class="card-title">Hackflix</h5>
         <p class="card-text">
@@ -144,10 +136,16 @@
         </p>
 
         <div class="text-center">
-          <a href="https://github.com/trottafede/Hackflix" target="_blank"
+          <a
+            href="https://github.com/trottafede/Hackflix"
+            target="_blank"
+            class="My-a-distance"
             ><i class="fab fa-github"></i
           ></a>
-          <a href="https://hackflix-eight.vercel.app/" target="_blank"
+          <a
+            href="https://hackflix-eight.vercel.app/"
+            target="_blank"
+            class="My-a-distance"
             ><i class="fas fa-laptop"> {{ see }}</i></a
           >
         </div>
@@ -162,12 +160,14 @@
   <!--  -->
   <div class="col">
     <div class="card h-100">
-      <img
-        src="https://i.imgur.com/PeexCg3.png"
-        class="card-img-top"
-        alt="Automotora image"
-        height="200"
-      />
+      <a href="https://automotora-vip-ha-front.vercel.app/">
+        <img
+          src="https://i.imgur.com/PeexCg3.png"
+          class="card-img-top"
+          alt="Automotora image"
+          height="200"
+        />
+      </a>
       <div class="card-body">
         <h5 class="card-title">Automotora</h5>
         <p class="card-text">
@@ -182,9 +182,13 @@
           <a
             href="https://github.com/trottafede/AutomotoraVIP-HA-Front"
             target="_blank"
+            class="My-a-distance"
             ><i class="fab fa-github"></i
           ></a>
-          <a href="https://automotora-vip-ha-front.vercel.app/" target="_blank"
+          <a
+            href="https://automotora-vip-ha-front.vercel.app/"
+            target="_blank"
+            class="My-a-distance"
             ><i class="fas fa-laptop"> {{ see }}</i></a
           >
         </div>
@@ -195,4 +199,49 @@
     </div>
   </div>
   <!-- asd -->
+  <!--  -->
+  <div class="col">
+    <div class="card h-100">
+      <a href="https://twitter-tan.vercel.app/signIn">
+        <img
+          src="https://i.imgur.com/lKZS2yK.png"
+          class="card-img-top"
+          alt="twitter-img"
+          height="200"
+        />
+      </a>
+      <div class="card-body">
+        <h5 class="card-title">Twitter Clone</h5>
+        <p class="card-text">
+          In this version of Twitter clone, we did server-side rendering using
+          EJS
+        </p>
+
+        <p class="card-text">
+          Front-end technologies: HTML, CSS3, JavaScript (ES6+), Bootstrap
+        </p>
+        <p class="card-text">
+          Back-end technologies: Node.js, Express.js, Passport.js, EJS
+        </p>
+
+        <div class="text-center">
+          <a
+            href="https://github.com/trottafede/twitter"
+            target="_blank"
+            class="My-a-distance"
+            ><i class="fab fa-github"></i
+          ></a>
+          <a
+            href="https://twitter-tan.vercel.app/signIn"
+            target="_blank"
+            class="My-a-distance"
+            ><i class="fas fa-laptop"> {{ see }}</i></a
+          >
+        </div>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Date of the project: April 26, 2021 </small>
+      </div>
+    </div>
+  </div>
 </div>
