--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,12 +1,14 @@
 <div class="mb-3 mt-3">
-  <a href="#about">Projects</a>
+  <a href="#about"
+    ><i class="fas fa-code"></i> Code projects <i class="fas fa-code"></i
+  ></a>
 </div>
 <div class="mb-3">
-  <a href="#about">Algo irá acá</a>
+  <a href="#about"><i class="fas fa-briefcase"></i> Work experience </a>
 </div>
 <div class="mb-3">
-  <a href="#about">Algo para poner acá</a>
+  <a href="#about"><i class="fas fa-user-graduate"></i> Education </a>
 </div>
 <div class="mb-3">
-  <a href="#about">Algo por acá</a>
+  <a href="#about"><i class="fas fa-user-alt"></i> About me</a>
 </div>
