--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
     </div>
     <div class="col-md-10">
       <app-projects></app-projects>
+      <!-- <app-about-me></app-about-me> -->
+      <!-- <app-education></app-education> -->
     </div>
   </div>
 </div>
