--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -3,7 +3,22 @@ a {
   color: inherit;
 }
 
-a {
-  margin-right: 40px;
-  margin-left: 40px;
+.My-a-distance {
+  margin-right: 20px;
+  margin-left: 20px;
+}
+
+.My-End-Of-Project {
+  margin-bottom: 40px;
+}
+
+img {
+  transition: transform 0.4s, -webkit-transform 0.3s;
+}
+
+img:hover {
+  -webkit-transform: scale(1);
+  transform: scale(1.05);
+  box-shadow: 0 0 9px 1px #000;
+  border: 1px solid #e9e9e9;
 }
