--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
       <app-side-bar></app-side-bar>
     </div>
     <div class="col-md-10">
-      <app-projects></app-projects>
+      <router-outlet></router-outlet>
+      <!-- <app-projects></app-projects> -->
       <!-- <app-about-me></app-about-me> -->
       <!-- <app-education></app-education> -->
     </div>
