--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,7 +3,7 @@
   style="background-color: #e3f2fd"
 >
   <div class="container">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" routerLink="/">
       <img
         src="https://img.freepik.com/vector-gratis/personaje-lindo-perro-samoyedo-sentado_77984-469.jpg?size=338&ext=jpg"
         alt=""
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#"
+          <a class="nav-link" aria-current="page" routerLink="/"
             ><i class="fas fa-home"></i
           ></a>
         </li>
