--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,14 +1,16 @@
 <div class="mb-3 mt-3">
-  <a href="#about"
+  <a routerLink="/CodeProjects"
     ><i class="fas fa-code"></i> Code projects <i class="fas fa-code"></i
   ></a>
 </div>
 <div class="mb-3">
-  <a href="#about"><i class="fas fa-briefcase"></i> Work experience </a>
+  <a routerLink="/WorkExperience"
+    ><i class="fas fa-briefcase"></i> Work experience
+  </a>
 </div>
 <div class="mb-3">
-  <a href="#about"><i class="fas fa-user-graduate"></i> Education </a>
+  <a routerLink="/Education"><i class="fas fa-user-graduate"></i> Education </a>
 </div>
 <div class="mb-3">
-  <a href="#about"><i class="fas fa-user-alt"></i> About me</a>
+  <a routerLink="/AboutMe"><i class="fas fa-user-alt"></i> About me</a>
 </div>
