Algunos componentes extras

--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -3,14 +3,23 @@
     ><i class="fas fa-code"></i> Code projects <i class="fas fa-code"></i
   ></a>
 </div>
+
 <div class="mb-3">
   <a routerLink="/WorkExperience"
     ><i class="fas fa-briefcase"></i> Work experience
   </a>
 </div>
+
 <div class="mb-3">
   <a routerLink="/Education"><i class="fas fa-user-graduate"></i> Education </a>
 </div>
+
 <div class="mb-3">
   <a routerLink="/AboutMe"><i class="fas fa-user-alt"></i> About me</a>
 </div>
+
+<div class="mb-3">
+  <a routerLink="/Contact"><i class="fas fa-id-card"></i> Contact </a>
+</div>
+
+<hr />
