--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -15,11 +15,11 @@
 </div>
 
 <div class="mb-3">
-  <a routerLink="/AboutMe"><i class="fas fa-user-alt"></i> About me</a>
+  <a routerLink="/AboutMe"><i class="fas fa-user-alt"></i> About me </a>
 </div>
 
 <div class="mb-3">
-  <a routerLink="/Contact"><i class="fas fa-id-card"></i> Contact </a>
+  <a routerLink="/Contact"><i class="fas fa-id-card"></i> Contact me </a>
 </div>
 
 <hr />
