--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-2">
-      <app-side-bar></app-side-bar>
+      <app-side-bar class="mediaQuery"></app-side-bar>
     </div>
     <div class="col-md-10">
       <router-outlet></router-outlet>
