--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -5,7 +5,13 @@
 <!--  -->
 
 <!--  -->
-<div class="row row-cols-1 row-cols-md-3 g-4 My-End-Of-Project">
+<div
+  class="
+    row row-cols-1 row-cols-md-3 row-cols-md-3 row-cols-sm-12
+    g-4
+    My-End-Of-Project
+  "
+>
   <!--  -->
   <div class="col">
     <div class="card h-100">
