--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,13 @@ body {
   margin: 0px;
   padding: 0px;
 }
+
+@media only screen and (max-width: 765px) {
+  body {
+    background-color: rgb(173, 207, 230);
+  }
+
+  .mediaQuery {
+    display: none;
+  }
+}
