Responsivness para mobile

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -13,7 +13,7 @@
   "
 >
   <!--  -->
-  <div class="col">
+  <div class="col my-card-style">
     <div class="card h-100">
       <a href="https://e-commerce-front-three.vercel.app/">
         <img
@@ -69,7 +69,7 @@
   </div>
 
   <!--  -->
-  <div class="col">
+  <div class="col my-card-style">
     <div class="card h-100">
       <a href="https://twitter-react-seven.vercel.app/">
         <img
@@ -120,7 +120,7 @@
   </div>
 
   <!--  -->
-  <div class="col">
+  <div class="col my-card-style">
     <div class="card h-100">
       <a href="https://hackflix-eight.vercel.app/">
         <img
@@ -164,7 +164,7 @@
 
   <!--  -->
   <!--  -->
-  <div class="col">
+  <div class="col my-card-style">
     <div class="card h-100">
       <a href="https://automotora-vip-ha-front.vercel.app/">
         <img
@@ -206,7 +206,7 @@
   </div>
   <!-- asd -->
   <!--  -->
-  <div class="col">
+  <div class="col my-card-style">
     <div class="card h-100">
       <a href="https://twitter-tan.vercel.app/signIn">
         <img
