--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -12,6 +12,52 @@
     My-End-Of-Project
   "
 >
+  <div class="col my-card-style">
+    <div class="card h-100">
+      <a href="https://el-galpon-front-end.vercel.app/">
+        <img
+          src="https://i.imgur.com/vvNExCq.jpg"
+          class="card-img-top"
+          alt="HackComerce image"
+          height="200"
+        />
+      </a>
+      <div class="card-body">
+        <h5 class="card-title">Autoservice el galpón</h5>
+        <p class="card-text">
+          This is an e-comemerce page for the Autoservice el Galpón
+        </p>
+
+        <p class="card-text">Front-end technologies: Angular</p>
+        <p class="card-text">Back-end technologies: Working on it</p>
+
+        <div class="text-center">
+          <a
+            href="https://github.com/trottafede/ElGalponFrontEnd"
+            target="_blank"
+            class="My-a-distance"
+            ><i class="fab fa-github"> Front</i></a
+          >
+          <!-- <a
+          href="https://github.com/trottafede/e-commerce-back"
+          target="_blank"
+          class="My-a-distance"
+          ><i class="fab fa-github"> Back-end</i></a
+        > -->
+          <a
+            href="https://el-galpon-front-end.vercel.app/"
+            target="_blank"
+            class="My-a-distance"
+            ><i class="fas fa-laptop">{{ see }}</i></a
+          >
+        </div>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Date of the project: July 2, 2021</small>
+      </div>
+    </div>
+  </div>
+
   <!--  -->
   <div class="col my-card-style">
     <div class="card h-100">
